youker-assistant (2.2.11ubuntu1) zesty; urgency=low

  [ hebing ]
  * merge kylin-assistant

 -- hebing <hebing@kylinos.cn>  Fri, 01 Sep 2017 09:04:11 +0800

youker-assistant (2.2.10-0ubuntu1) zesty; urgency=low

  [ hebing ]
  * invisable the mainwindow's title for UKUI
  * rewrite the function of get_disk and get_network

 -- hebing <hebing@kylinos.cn>  Fri, 23 Jun 2017 14:04:48 +0800

youker-assistant (2.2.9-0ubuntu1) zesty; urgency=low

  [ hebing ]
  * add systemdbus method judge_sensors_exists_hb
  * fix bug the text of vga_product is too long

 -- hebing <hebing@kylinos.cn>  Wed, 19 Apr 2017 14:41:56 +0800

youker-assistant (2.2.8-0ubuntu1) zesty; urgency=low

  * Access information of network cards with QThread.
  * Refresh the hardware information when the page is switched.
  * Free memory when hardware information page is switched.

 -- lixiang <lixiang@kylinos.cn>  Fri, 07 Apr 2017 16:40:29 +0800

youker-assistant (2.2.7-0ubuntu2) zesty; urgency=low

  [ lixiang ]
  * Set Cpu FM mode.
  * Only support x86 and ARM.

  [ Mathieu Trudel-Lapierre ]
  * debian/control: limit dmidecode Depends to x86 and ARM. (LP: #1679788)
  
 -- lixiang <lixiang@kylinos.cn>  Thu, 30 Mar 2017 10:37:12 +0800

youker-assistant (2.2.7-0ubuntu1) zesty; urgency=low

  * Call cheese.
  * Free some list struct.
  * Modify os release information.
  * Resolved lintian warning.

 -- lixiang <lixiang@kylinos.cn>  Thu, 23 Mar 2017 10:17:31 +0800

youker-assistant (2.2.6-0ubuntu1) zesty; urgency=low

  * Set launcher position.
  * Multi screen display normal.
  * Display virtual network card info.
  * Display right network info.

 -- lixiang <lixiang@kylinos.cn>  Mon, 20 Mar 2017 11:32:41 +0800

youker-assistant (2.2.4-0ubuntu1) zesty; urgency=low

  * Fixed the ℃  display.
  * Fixed some bug about information.

 -- lixiang <lixiang@kylinos.cn>  Fri, 17 Mar 2017 15:09:41 +0800

youker-assistant (2.1.9-0ubuntu1) xenial; urgency=low

  * change get_sensor because the kernel update
